fixes typo in swagger docs
